# PowerAgentBench

./: .gitignore  README.md  pyproject.toml
bench_steady/level_1/: README.md  actioncost.json  baseline_summary.json  benchmark_utils.py  build_case.py  case39_level1.nc  evaluate_solution.py  solution_template.json
bench_steady/level_1/.mplconfig/: fontlist-v330.json
benchmarks/steady/level_1/: README.md  actionspace.json  baseline_summary.json
benchmarks/steady/level_2/: .env.example  README.md
benchmarks/steady/level_2/prompts/: steady_n2_llm_prompt.json
cases/case39/matpower/: case39.m
cases/case39/pandapower/: case39.json
cases/case39/pypsa/: case39.nc
poweragentbench/: benchmark_utils.py  llm_agent_adapter.py  ollama_client.py  openai_client.py  steady_state_agentic.py
scripts/: build_case.py  convert_case.py  evaluate_solution.py  run_steady_n2_baselines.py  run_steady_n2_ollama_eval.py  run_steady_n2_openai_eval.py
